src/test/deca/context/valid/declaVariable/onlyTypeNoInitialization.deca
// Description:
//    Pas d'initialisation de valeur
//
// Résultats:
//    Ligne 11: Pass
//
// Historique:
//    Créé le 11/01/2024

{
   float a;
}
