src/test/deca/context/invalid/type-unary-minus-bool.deca
// Description:
//    Négation d'un booléen
//
// Resultats:
//    Ligne 11: Le type ne respecte pas la règle 3.37.
//
// Historique:
//    cree le 01/01/2024

{
    print(-true);
}